logs/gitxmlparser.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/gitxmlparser'...
Listing './lib/python3.5/site-packages/gitxmlparser/bin'...
Compiling './lib/python3.5/site-packages/gitxmlparser/gitxmlparser.py'...
***   File "./lib/python3.5/site-packages/gitxmlparser/gitxmlparser.py", line 18
    print j
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gitxmlparser/include'...
Listing './lib/python3.5/site-packages/gitxmlparser/include/python2.7'...
Listing './lib/python3.5/site-packages/gitxmlparser/lib'...
Listing './lib/python3.5/site-packages/gitxmlparser/lib/python2.7'...
Listing './lib/python3.5/site-packages/gitxmlparser/lib/python2.7/distutils'...
Listing './lib/python3.5/site-packages/gitxmlparser/lib/python2.7/lib-dynload'...
Listing './lib/python3.5/site-packages/gitxmlparser/lib/python2.7/site-packages'...
Listing './lib/python3.5/site-packages/gitxmlparser/lib/python2.7/site-packages/pip'...
Listing './lib/python3.5/site-packages/gitxmlparser/lib/python2.7/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/gitxmlparser/lib/python2.7/site-packages/pip/_vendor/distlib'...
Listing './lib/python3.5/site-packages/gitxmlparser/lib/python2.7/site-packages/pip/_vendor/requests'...
Listing './lib/python3.5/site-packages/gitxmlparser/lib/python2.7/site-packages/pip-1.5.4.dist-info'...
Listing './lib/python3.5/site-packages/gitxmlparser/lib/python2.7/site-packages/requests'...
Listing './lib/python3.5/site-packages/gitxmlparser/lib/python2.7/site-packages/requests-2.7.0.dist-info'...
Listing './lib/python3.5/site-packages/gitxmlparser/lib/python2.7/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/gitxmlparser/lib/python2.7/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/gitxmlparser/lib/python2.7/site-packages/setuptools-2.2.dist-info'...
Listing './lib/python3.5/site-packages/gitxmlparser/local'...
Listing './lib/python3.5/site-packages/gitxmlparser/local/bin'...
Listing './lib/python3.5/site-packages/gitxmlparser/local/include'...
Listing './lib/python3.5/site-packages/gitxmlparser/local/include/python2.7'...
Listing './lib/python3.5/site-packages/gitxmlparser/local/lib'...
Listing './lib/python3.5/site-packages/gitxmlparser/local/lib/python2.7'...
Listing './lib/python3.5/site-packages/gitxmlparser/local/lib/python2.7/distutils'...
Listing './lib/python3.5/site-packages/gitxmlparser/local/lib/python2.7/lib-dynload'...
Listing './lib/python3.5/site-packages/gitxmlparser/local/lib/python2.7/site-packages'...
Listing './lib/python3.5/site-packages/gitxmlparser/local/lib/python2.7/site-packages/pip'...
Listing './lib/python3.5/site-packages/gitxmlparser/local/lib/python2.7/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/gitxmlparser/local/lib/python2.7/site-packages/pip-1.5.4.dist-info'...
Listing './lib/python3.5/site-packages/gitxmlparser/local/lib/python2.7/site-packages/requests'...
Listing './lib/python3.5/site-packages/gitxmlparser/local/lib/python2.7/site-packages/requests-2.7.0.dist-info'...
Listing './lib/python3.5/site-packages/gitxmlparser/local/lib/python2.7/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/gitxmlparser/local/lib/python2.7/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/gitxmlparser/local/lib/python2.7/site-packages/setuptools-2.2.dist-info'...
Listing './lib/python3.5/site-packages/gitxmlparser-0.1.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/xmltodict-0.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
